2005-06-10 Toady <toady@gscore.org>

	* src/draw_note.c, src/include/draw_note.h: added
	* src/layout-engine.c: start to handle notes
	
2005-05-21 Toady <toady@gscore.org>

	* src/draw_pitch_cursor.c, src/include/draw_pitch/cursor.h: added
	* src/include/constants.h, src/staff.c, src/layout-engine.c: support of the pitch cursor

2005-05-20 Toady <toady@gscore.org>

	* src/staff.c, glade/gscore.glade: time signature fully working
	
2005-05-10 Toady <toady@gscore.org>

	* src/spacings, src/draw_time_signature.c, src/score.c: better time signature
	
2005-05-02 Toady <toady@gscore.org>

	* src/draw_time_signature.c, src/include/draw_time_signature.h: added
	
2005-04-28 Toady <toady@gscore.org>

	* src/staff.c: improved key signature
	
2005-04-26 Toady <toady@gscore.org>

	* src/draw_key_signature.c, src/include/draw_key_signature.h: added
	* plugins/midi/*: works with simili

2005-04-21 Toady <toady@gscore.org>

	* src/draw_key.c, src/include/draw_key.h: added
	* src/layout-engine.c: support for cairoized clefs
	
2005-04-20 Toady <toady@gscore.org>

	* src/score.c: cleaned and added functions to work with scores better
	
2005-04-19 Toady <toady@gscore.org>

	* src/layout-engine.c, src/include/layout-engine.c: added
	* src/score.c: modified
	
2005-04-18 Toady <toady@gscore.org>

	* src/draw_staff.c, src/include/draw_staff.h: creation to draw a cairo staff
	
2005-04-08 Toady <toady@gscore.org>

	* src/score.c: gets the score widget to draw using cairo instructions
	
2005-04-04 Toady <toady@gscore.org>

	* plugins/abc/import-abc.c, src/score.c: abc plugin can import scores correctly
	
2005-04-03 Toady <toady@gscore.org>

	* src/edit.c: improved measure jumping
	
2005-04-02 Toady <toady@gscore.org>

	* src/score.c: Replace "set header" glade widget with custom to make the release in 2005 and stop fighting with glade for MDI stuff
	* src/edit.c: Jump to measure working
	
2005-04-01 Toady <toady@gscore.org>

	* src/key_event.c: Make chord only with notes
	