@@ -1,3 +1,4 @@
+
 #ifndef _LIBGSCORE_GSCORE_ERROR_H
 #define _LIBGSCORE_GSCORE_ERROR_H
 
