@@ -1,3 +1,11 @@
+2005-07-26 Toady <toady@gscore.org>
+
+	* src/score.c, src/layout-engine.c: droped the score widget in favor of the drawing area, since it is the hell to follow the cairo developement, I prefer letting gtk+ folks doing this job. I might come back on this widget latter, but I don't want to be too late (well, I am already!).
+	
+2005-07-26 Toady <toady@gscore.org>
+
+	* src/score-object-manager.c, src/include/score-object-manager.h: added
+	
 2005-06-10 Toady <toady@gscore.org>
 
 	* src/draw_note.c, src/include/draw_note.h: added
